--- a/.github/workflows/lint-and-format.yml
+++ b/.github/workflows/lint-and-format.yml
@@ -3,7 +3,7 @@ name: Frontend CI
 on:
   pull_request:
   push:
-    branches: [main, develop, github]
+    branches: [main, develop]
 
 permissions:
   contents: read
