--- a/.github/workflows/lint-and-format.yml
+++ b/.github/workflows/lint-and-format.yml
@@ -1,4 +1,4 @@
-name: Frontend CI
+name: Lint and Format Check
 
 on:
   pull_request:
@@ -9,7 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  ci:
+  lint-and-format:
+    name: Lint and Format Check
     runs-on: ubuntu-latest
 
     steps:
